# lpn

./: .travis.yml  Cargo.toml  README.md
benches/: attack.rs  codes.rs  concatenated.rs  fwht.rs  samples_drop.rs  stgen.rs
examples/: benchmark_codes.rs  benchmark_codes_bogos_attack_512_1_8.rs  bkw.rs  bkw_lf1.rs  bogos_attack_512_1_8.rs  codes_bkw.rs  codes_concatenated.rs  codes_gauss.rs  codes_lf1.rs  find_stgen_smalls.rs  find_suitable_codes.rs  gauss.rs  large_xor_fwht.rs  lpn_decoded_attack.rs  new_189_64_codes.rs  our_attack_1.rs  our_attack_140_1_4_m38.rs  our_attack_150_1_4_m39.rs  our_attack_151_1_4_m39.rs  our_attack_153_1_4_m39.rs  our_attack_154_1_4_m39.rs  our_attack_155_1_4.rs  our_attack_155_1_4_m39.rs  our_attack_190_1_8.rs  our_attack_200_1_8.rs  serialize.rs  stgen.rs  xor_fwht.rs
src/: bitvector.rs  bkw.rs  covering_codes.rs  gauss.rs  lf1.rs  lib.rs  main.rs  oracle.rs  random.rs  util.rs
src/codes/: concatenated.rs  generate_syndrome_code_implementation.py  hamming.rs  hamming_3_1.rs  identity.rs  mod.rs  repetition.rs  stgen.rs  syndrome_code_implementation.rs.j2
src/codes/bogosrnd/: bogosrnd_18_6.rs  bogosrnd_19_6.rs  bogosrnd_19_7.rs  mod.rs
src/codes/custom/: custom_5_3.rs  mod.rs
src/codes/golay/: golay_23_12.rs  golay_24_12.rs  mod.rs
src/codes/guava/: guava_10_2.rs  guava_10_3.rs  guava_10_4.rs  guava_10_5.rs  guava_10_6.rs  guava_10_7.rs  guava_10_8.rs  guava_10_9.rs  guava_11_10.rs  guava_11_2.rs  guava_11_3.rs  guava_11_4.rs  guava_11_5.rs  guava_11_6.rs  guava_11_7.rs  guava_11_8.rs  guava_11_9.rs  guava_12_10.rs  guava_12_11.rs  guava_12_2.rs  guava_12_3.rs  guava_12_4.rs  guava_12_5.rs  guava_12_6.rs  guava_12_7.rs  guava_12_8.rs  guava_12_9.rs  guava_13_10.rs  guava_13_11.rs  guava_13_12.rs  guava_13_2.rs  guava_13_3.rs  guava_13_4.rs  guava_13_5.rs  guava_13_6.rs  guava_13_7.rs  guava_13_8.rs  guava_13_9.rs  guava_14_10.rs  guava_14_11.rs  (+180 more)
src/codes/hamming/: generate_hamming.py  generate_small_hamming.py  hamming_127_120.rs  hamming_15_11.rs  hamming_31_26.rs  hamming_3_1.rs  hamming_63_57.rs  hamming_7_4.rs  hamming_n_k.rs.j2  mod.rs
src/codes/mds/: mds_3_2.rs  mds_4_3.rs  mds_5_4.rs  mod.rs
src/codes/syndromes/: gensyndrome.sage  hamming_7_4.rs  mod.rs
src/codes/wagner/: mod.rs  wagner_20_11.rs  wagner_22_13.rs  wagner_23_14.rs  wagner_25_15.rs  wagner_26_16.rs  wagner_27_17.rs  wagner_28_18.rs  wagner_29_19.rs  wagner_30_20.rs  wagner_32_21.rs
tests/: serialize.rs
