[package]
name = "lpn"
version = "0.1.2"
description = "Software to study attacks on the Learning Parity with Noise problem"
repository = "https://github.com/thomwiggers/lpn"
homepage = "https://thomwiggers.nl/research/msc-thesis/"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
license = 'MIT'
edition = '2018'

[dependencies]
rand = "0.8.2"
rand_hc = "0.3.0"
fnv = "1.0"
itertools = "^0.10"
rayon = "1.5.0"
lazy_static = "1"
binomial-iter = "0.1"
num-rational = "0.3"
num-bigint = "0.3"
num-traits = "0.2"
factorial = "0.2"
m4ri-rust = { features = ["serde"], git = "https://github.com/thomwiggers/m4ri-rust.git", branch ="vec-improvements" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9"
unchecked_unwrap = "2.0"
packed_simd_2 = "0.3"
jemallocator = { version = "0.3.0", optional = true }

[features]
default = ['nodebug', 'codes', 'unchecked_unwrap/debug_checks']
nodebug = []
codes = ["golay", "bogosrnd", "custom", "hamming", "stgen", "mds"]
golay = []
bogosrnd = []
custom = []
hamming = []
mds = []
stgen = []

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
#codegen-units = 1
overflow-checks = false
